fix-bug add too much valid to classname

--- a/styles/style.css
+++ b/styles/style.css
@@ -162,7 +162,7 @@ input{
     border:1px solid red !important
 }
 
-#streetName-input{
+#street-name{
     width: 61.8%;
     float: left;
 }
